--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -24,9 +24,14 @@ en escribir sobre Datos Abiertos.
 
 <br />
 
-Los Datos Abiertos son aquellos conjuntos de datos que pueden ser de archivos de formatos propietarios decodificables,
-texto, imágenes, sonido ó video que estan acompañados por una licencia que permite su utilización.  No existe una
-limitación acerca de qué datos pueden ó no ser abiertos salvo las legales de cada país.
+<li>Formatos reutilizables</li>. Los Datos Abiertos son aquellos conjuntos de datos que pueden ser de archivos de diversos formatos, por ejemplo
+texto, imágenes, sonido, video y otros.  A menudo se menciona en las características de los
+Datos Abiertos que estén compartidos en formatos del tipo planilla de texto.  Esto se debe a que resulta más conveniente este
+formato para su análisis.  Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
+Por ejemplo, los <a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n6105_Lamagna.pdf">Datos Abiertos de Gobierno Electorales de la República Argentina</a>.
+Es un ejemplo ideal, datos en formato texto con los resultados electorales por mes, acompañados por su
+telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
+
 
 <br />
 <h2>Preguntas frecuentes</h2>
