--- a/es_central.html
+++ b/es_central.html
@@ -7,6 +7,8 @@
 <br /><br />
 <br />
 <center>
+<a href="od/es_index.html"><img src="icon_datosabiertos.png" width=100 /></a>
+&nbsp;&nbsp;
 <a href="dm/es_index.html"><img src="icon_datamining.png" width=100 /></a>
 &nbsp;&nbsp;
 <a href="security/es_index.html"><img src="icon_seguridad.png" width=90 /></a>
