--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -4,38 +4,8 @@
 </head>
 <body bgcolor="black" style="color:white; font-family: Verdana;">
 
-<h1>Datos Abiertos</h1>
+<li>¿ Qué es Datamining ?</li>
 
-Esta es una página en construcción e irá cambiando, buscando la mejora continua buscando como
-meta describir de manera más útil posible qué son los datos abiertos.  La útilidad la considero
-como una reducción de costos y energía en la mayoría de la población para alcanzar los mismos ó
-más objetivos que permitan vivir en paz y justicia para todos sin tener que ceder derechos de
-libertad sinó que incrementandolos.  ¿ Le parece utópico ?  Es lo que le han hecho creer.
-</br>
-</br>
-
-
-
-<h2>¿ Qué son los Datos Abiertos ?</h2>
-No habiendo podido encontrar una definición que me convenza decidí hacer mi propio espacio de reflexión acerca de lo que son
-los Datos Abiertos.  Hay <a href="definiciones.html">aquí</a> una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
-en escribir sobre Datos Abiertos.
-
-
-<br />
-
-<li>Formatos reutilizables</li>. Los Datos Abiertos son aquellos conjuntos de datos que pueden ser de archivos de diversos formatos, por ejemplo
-texto, imágenes, sonido, video y otros.  A menudo se menciona en las características de los
-Datos Abiertos que estén compartidos en formatos del tipo planilla de texto.  Esto se debe a que resulta más conveniente este
-formato para su análisis.  Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
-Por ejemplo, los <a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n6105_Lamagna.pdf">Datos Abiertos de Gobierno Electorales de la República Argentina</a>.
-Es un ejemplo ideal, datos en formato texto con los resultados electorales por mes, acompañados por su
-telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
-
-
-<br />
-<h2>Preguntas frecuentes</h2>
-<li>¿ Los datos abiertos pueden tener nombres, apellidos y DNI ?</li>
 
 </br>
 </br>
