--- a/od/es_index.html
+++ b/od/es_index.html
@@ -36,12 +36,11 @@ telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
 <li>¿ Los datos abiertos pueden tener nombres, apellidos y DNI ?</li>
 
 
-
-Aqui algunas investigaciones que hice con caracter voluntario, motivado por la
-libertad jurídica y técnica de utilizar estos datos, que personalmente interpreto
-como de relevancia e interés, ya sea para tomar alguna decisión ó como dato de color,
-algo anecdótico en una charla de cafe.<br /><br />
-
+A continuación algunos ejemplos notables en los que se utilizan Datos Abiertos.  En algunos casos
+pude vincular los repositorios, en otros enlazarlo a sus páginas origen.  Agradezco a los heroes
+(aveces anónimos) que comparten su tiempo y dedicación independientes del gobierno, pero no de vos.
+<br />
+<br />
 <a href="http://www.wallves.com/od/boletinoficial/designaciones.html" target="_bo1">Designaciones en el estado nacional, República Argentina</a><br />
 <br />
 <a href="https://datoabierto.wordpress.com/">Blog de Datos Abiertos en [wordpress]</a><br />
