--- a/od/es_index.html
+++ b/od/es_index.html
@@ -15,11 +15,10 @@ libertad sinó que incrementandolos.  ¿ Le parece utópico ?  Es lo que le han 
 </br>
 
 <h2>¿ Qué son los Datos Abiertos ?</h2>
-No habiendo podido encontrar una definición que me convenza decidí hacer mi propio espacio de reflexión acerca de lo que son
-los Datos Abiertos.  Hay <a href="definiciones.html">aquí</a> una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
+Reflexionando, trabajando e investigando sobre los Datos Abiertos aca comparto mis conclusiones:<br />
+<br /><br />
+Hay <a href="definiciones.html">otros puntos de vista</a>, una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
 en escribir sobre Datos Abiertos.
-
-
 <br />
 
 <li>Formatos reutilizables</li>. Los Datos Abiertos son aquellos conjuntos de datos que pueden ser de archivos de diversos formatos, por ejemplo
@@ -30,7 +29,10 @@ Por ejemplo, los <a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n61
 Es un ejemplo ideal, datos en formato texto con los resultados electorales por mes, acompañados por su
 telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
 
-
+<br/>
+<b>Ejemplos</b>
+<a href="http://www.wallves.com/od/boletinoficial/deuda_banco_mundial.html">
+Deuda de la República Argentina con el Banco Mundial (Datos y Visualización)</a><br />
 <br />
 <h2>Preguntas frecuentes</h2>
 <li>¿ Los datos abiertos pueden tener nombres, apellidos y DNI ?</li>
