--- a/od/es_index.html
+++ b/od/es_index.html
@@ -31,12 +31,14 @@ telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
 
 <br/>
 <b>Ejemplos</b>
-<a href="http://www.wallves.com/od/boletinoficial/deuda_banco_mundial.html">
+<a href="http://www.wallves.com/od/boletinoficial/deuda_banco_mundial.html" target="_new">
 Deuda de la República Argentina con el Banco Mundial (Datos y Visualización)</a><br />
+<a href="https://hackdash.org/dashboards/svlhack" target="_new">Hackaton con Datos abiertos Sousveillance II</a><br />
+
+
 <br />
 <h2>Preguntas frecuentes</h2>
 <li>¿ Los datos abiertos pueden tener nombres, apellidos y DNI ?</li>
-
 
 A continuación algunos ejemplos notables en los que se utilizan Datos Abiertos.  En algunos casos
 pude vincular los repositorios, en otros enlazarlo a sus páginas origen.  Agradezco a los heroes
