--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <html>
 <head>
-<title>Walter Marcelo Lamagna</title>
-<link rel="shortcut icon" href="/favicon.ico?v=6cd6089ee7f6">
+<meta charset="UTF-8">
+<title>Walter - Mi Pagina web !</title>
 </head>
-<frameset rows="40,*" border="0">
-  <frame name="alto" src="top.html" scrolling="no">
-  <frame name="central" src="es_central.html"> 
-</frameset> 
+<body bgcolor="black" style="color:white; font-family: Verdana;">
+<br /><br />
+<br />
+Bienvenido!  En este "espacio virtual" comparto de forma pública algunas notas, ideas, proyectos.  
+Aca hay temas en general, de mi profesión ,un hobby o deporte.
+
+En este blog el formato es más des-estructurado, inclusive le digo que no me decido si usar 
+Inglés ó Español en lo que voy escribiendo.  Si quiere una presentación más profesional 
+sobre mi persona fíjese en Linkedin, y para temas más triviales: Twitter, Instagram y Github.
+
+Por el momento no tengo mucho que decir, vivo en Argentina estoy casado y 
+tengo dos hermosas hijas.  Me encanta el café expresso, también acepto una cerveza eventualmente.
+
+
+Tengo interes en lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
+
+&nbsp;&nbsp;
+<a href="dm/es_index.html"><img src="icon_datamining.png" width=100 /></a>
+&nbsp;&nbsp;
+<a href="security/es_index.html"><img src="icon_seguridad.png" width=90 /></a>
+&nbsp;&nbsp;
+<a href="security/es_index.html"><img src="icon_sysadmin.png" width=90 /></a>
+</center>
+<br />
+<br />
+<a href="https://www.linkedin.com/in/walter-lamagna"><img src="linkedin_circle_color-256.png" width=50 /></a>
+<br />
+</body>
 </html>
