--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@ tengo dos hermosas hijas.  Me encanta el café expresso, también acepto una cer
 Tengo interes en lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
 <br /><br />
 
-
+Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog tecnico</a>.<br />
 &nbsp;&nbsp;
-<a href="dm/es_index.html"><img src="icon_datamining.png" width=100 /></a>
+Aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.<br />
+
+Curse una <a href="dm/es_index.html">Maestria en Datamining</a>.
+
 &nbsp;&nbsp;
 <a href="security/es_index.html"><img src="icon_seguridad.png" width=90 /></a>
 &nbsp;&nbsp;
