--- a/od/es_index.html
+++ b/od/es_index.html
@@ -6,25 +6,34 @@
 
 <h1>Datos Abiertos</h1>
 
-Esta es una página en construcción e irá cambiando, buscando la mejora continua buscando como
-meta describir de manera más útil posible qué son los datos abiertos.  La útilidad la considero
-como una reducción de costos y energía en la mayoría de la población para alcanzar los mismos ó
-más objetivos que permitan vivir en paz y justicia para todos sin tener que ceder derechos de
-libertad sinó que incrementandolos.  ¿ Le parece utópico ?  Es lo que le han hecho creer.
+En el año 2009 aproximadamente, trabajaba en IBM como Administrador de Servidores Unix Senior y
+supe de una Jornada de Mineria de Datos en la UBA.  Tenia mucho interes en saber de que se trataba
+por eso asisti a esta Jornada.  Fue algo increible, quedé fascinado con lo que mostraron, parecia
+ciencia ficción, eran los rayos X de la informática.  Apenas pude me anoté en la Maestría y así
+me metí en este mundo del Datamining. 
+
+Lo que ocurre en Data Mining es que se necesitan DATOS, y tarde o temprano uno aprende y de pronto se
+da cuenta de que:
+* Todos los datos tienen un dueño, 
+* Lo mucho que las empresas importantes cuidan sus datos y lo celosos que son de ellos (por algo será).
+* Hay que tener mucho cuidado al usar un dato, hay que saber los términos y condiciones.
+
+Entonces también en este camino conocí los Datos Abiertos !  Datos públicos, cuyos dueños seríamos todos, o eso creo.
+Es raro, decir Datos Publicos, porque puede accederlo alguien que paga los impuestos que hicieron posible su recolección
+pero también alguien que vive en otro pais, asi que no voy a meterme en tantos detalles.
+
+Básicamente, son datos que podemos usar y estar tranquilos, que no deberíamos estar molestando a nadie, o eso espero !
 </br>
 </br>
 
-<h2>¿ Qué son los Datos Abiertos ?</h2>
-Reflexionando, trabajando e investigando sobre los Datos Abiertos aca comparto mis conclusiones:<br />
-<br /><br />
-Hay <a href="definiciones.html">otros puntos de vista</a>, una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
-en escribir sobre Datos Abiertos.
-<br />
+Algunos trabajitos mios:
+<a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">Procesado y analisis del Boletin Oficial</a><br />
+Encontre datos sobre <a href="https://github.com/wlamagna/datamining/tree/master/opendata/cinemometros">Cinemometros</a> y durante un tiempo estuve recolectando.<br />
 
-<li>Formatos reutilizables</li>. Los Datos Abiertos son aquellos conjuntos de datos que pueden ser de archivos de diversos formatos, por ejemplo
-texto, imágenes, sonido, video y otros.  A menudo se menciona en las características de los
-Datos Abiertos que estén compartidos en formatos del tipo planilla de texto.  Esto se debe a que resulta más conveniente este
-formato para su análisis.  Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
+Y Tambien por un tiempo reuni los datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina>covid 19</a>
+publicado en Argentina.  Pero bueno, todo dura un tiempo.<br /><br />
+
+Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
 Por ejemplo, los <a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n6105_Lamagna.pdf">Datos Abiertos de Gobierno Electorales de la República Argentina</a>.
 Es un ejemplo ideal, datos en formato texto con los resultados electorales por mes, acompañados por su
 telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
