--- a/od/es_index.html
+++ b/od/es_index.html
@@ -6,17 +6,14 @@
 
 <h1>Datos Abiertos</h1>
 
-En el año 2009 aproximadamente, trabajaba en IBM como Administrador de Servidores Unix Senior y
-supe de una Jornada de Mineria de Datos en la UBA.  Tenia mucho interes en saber de que se trataba
-por eso asisti a esta Jornada.  Fue algo increible, quedé fascinado con lo que mostraron, parecia
-ciencia ficción, eran los rayos X de la informática.  Apenas pude me anoté en la Maestría y así
-me metí en este mundo del Datamining. 
-
 Lo que ocurre en Data Mining es que se necesitan DATOS, y tarde o temprano uno aprende y de pronto se
 da cuenta de que:
-* Todos los datos tienen un dueño, 
-* Lo mucho que las empresas importantes cuidan sus datos y lo celosos que son de ellos (por algo será).
-* Hay que tener mucho cuidado al usar un dato, hay que saber los términos y condiciones.
+
+<ul>
+<li>Todos los datos tienen un dueño</li>
+<li>Lo mucho que las empresas importantes cuidan sus datos y lo celosos que son de ellos (por algo será).</li>
+<li>Hay que tener mucho cuidado al usar un dato, hay que saber los términos y condiciones.</li>
+</ul>
 
 Entonces también en este camino conocí los Datos Abiertos !  Datos públicos, cuyos dueños seríamos todos, o eso creo.
 Es raro, decir Datos Publicos, porque puede accederlo alguien que paga los impuestos que hicieron posible su recolección
