--- a/od/es_index.html
+++ b/od/es_index.html
@@ -27,7 +27,7 @@ Algunos trabajitos mios:
 <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">Procesado y analisis del Boletin Oficial</a><br />
 Encontre datos sobre <a href="https://github.com/wlamagna/datamining/tree/master/opendata/cinemometros">Cinemometros</a> y durante un tiempo estuve recolectando.<br />
 
-Y Tambien por un tiempo reuni los datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina>covid 19</a>
+Y Tambien por un tiempo reuni los datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">covid 19</a>
 publicado en Argentina.  Pero bueno, todo dura un tiempo.<br /><br />
 
 Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
