--- a/od/es_index.html
+++ b/od/es_index.html
@@ -51,11 +51,7 @@ pude vincular los repositorios, en otros enlazarlo a sus páginas origen.  Agrad
 (aveces anónimos) que comparten su tiempo y dedicación independientes del gobierno, pero no de vos.
 <br />
 <br />
-<a href="http://www.wallves.com/od/boletinoficial/designaciones.html" target="_bo1">Designaciones en el estado nacional, República Argentina</a><br />
-<br />
-<a href="https://datoabierto.wordpress.com/">Blog de Datos Abiertos en [wordpress]</a><br />
-<br />
-<a href="https://www.facebook.com/groups/datosabiertos/">Comunidad de datos abiertos de Argentina [facebook]</a><br />
+<a href="boletinoficial/designaciones.html" target="_bo1">Designaciones en el estado nacional, República Argentina</a><br />
 <br />
 
 <u><b>Análisis de redes sociales</b></u><br />
