--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ Aca hay temas en general, de mi profesión ,un hobby o deporte.
 En este blog el formato es más des-estructurado, inclusive le digo que no me decido si usar 
 Inglés ó Español en lo que voy escribiendo.  Si quiere una presentación más profesional 
 sobre mi persona fíjese en <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES">Linkedin</a>, 
- para temas más triviales: Twitter, Instagram y Github.
+ para temas más triviales: <a href="https://twitter.com/walamagna">Twitter</a>, 
+<a href="https://www.instagram.com/walmagna/">Instagram</a> y 
+<a href="https://github.com/wlamagna">Github</a>.
 
 Por el momento no tengo mucho que decir, vivo en Argentina estoy casado y 
 tengo dos hermosas hijas.  Me encanta el café expresso, también acepto una cerveza eventualmente.
