--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
 <body bgcolor="black" style="color:white; font-family: Verdana;">
 <br /><br />
 <br />
+<table width="900">
+<tr>
+<td>
 Bienvenido!  En este "espacio virtual" comparto de forma pública algunas notas, ideas, proyectos.  
 Aca hay temas en general, de mi profesión ,un hobby o deporte.
-
+</td></tr>
+<tr><td>
 En este blog el formato es más des-estructurado, inclusive le digo que no me decido si usar 
 Inglés ó Español en lo que voy escribiendo.  Si quiere una presentación más profesional 
 sobre mi persona fíjese en <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES">Linkedin</a>, 
  para temas más triviales: <a href="https://twitter.com/walamagna">Twitter</a>, 
 <a href="https://www.instagram.com/walmagna/">Instagram</a> y 
 <a href="https://github.com/wlamagna">Github</a>.
-
+</td></tr>
+<tr><td>
 Por el momento no tengo mucho que decir, vivo en Argentina estoy casado y 
 tengo dos hermosas hijas.  Me encanta el café expresso, también acepto una cerveza eventualmente.
-
 <br /><br />
 Tengo interes en lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
 <br /><br />
-
 Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog tecnico</a>.<br />
 &nbsp;&nbsp;
 Aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.<br />
@@ -33,6 +36,8 @@ Curse una <a href="dm/es_index.html">Maestria en Datamining</a>.
 <a href="security/es_index.html"><img src="icon_seguridad.png" width=90 /></a>
 &nbsp;&nbsp;
 <a href="security/es_index.html"><img src="icon_sysadmin.png" width=90 /></a>
+</td></tr></table>
+
 </center>
 <br />
 <br />
