--- a/index.html
+++ b/index.html
@@ -26,16 +26,15 @@ tengo dos hermosas hijas.  Me encanta el café expresso, también acepto una cer
 <br /><br />
 Tengo interes en lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
 <br /><br />
-Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog tecnico</a>.<br />
-&nbsp;&nbsp;
-Aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.<br />
-
-Curse una <a href="dm/es_index.html">Maestria en Datamining</a>.
-
-&nbsp;&nbsp;
-<a href="security/es_index.html"><img src="icon_seguridad.png" width=90 /></a>
-&nbsp;&nbsp;
-<a href="security/es_index.html"><img src="icon_sysadmin.png" width=90 /></a>
+Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog tecnico</a>, otras veces
+sobre mis aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.
+<br />
+Y fue central en mi educacion una <a href="dm/es_index.html">Maestria en Datamining</a>.
+<br />
+Desde los 10 años que programo, comencé con BASIC aunque la curiosidad inagotable me llevo
+aprender assembler y querer comprender los nuevos y emergentes desafios de la informática.
+Como joven SysOp de un BBS mi hobby de <a href="security/es_index.html">Sysadmin</a> se
+convirtió en mi trabajo.
 </td></tr></table>
 
 </center>
