--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 <body bgcolor="black" style="color:white; font-family: Verdana;">
 <br /><br />
 <br />
+<center>
 <table width="900">
 <tr>
 <td>
 Bienvenido!  En este "espacio virtual" comparto de forma pública algunas notas, ideas, proyectos.  
 Aca hay temas en general, de mi profesión ,un hobby o deporte.
-</td></tr>
-<tr><td>
+<br />
+<br />
 En este blog el formato es más des-estructurado, inclusive le digo que no me decido si usar 
 Inglés ó Español en lo que voy escribiendo.  Si quiere una presentación más profesional 
 sobre mi persona fíjese en <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES">Linkedin</a>, 
- para temas más triviales: <a href="https://twitter.com/walamagna">Twitter</a>, 
-<a href="https://www.instagram.com/walmagna/">Instagram</a> y 
-<a href="https://github.com/wlamagna">Github</a>.
-</td></tr>
-<tr><td>
+ para temas más triviales: <a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
+<a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
+<a href="https://github.com/wlamagna" target="_new">Github</a>.
+<br />
+<br />
 Por el momento no tengo mucho que decir, vivo en Argentina estoy casado y 
 tengo dos hermosas hijas.  Me encanta el café expresso, también acepto una cerveza eventualmente.
 <br /><br />
