--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Walter - Mi Pagina web !</title>
 </head>
-<body bgcolor="black" style="color:white; font-family: Verdana;">
+<body style="font-family: Arial;">
 <br /><br />
 <br />
 <center>
