--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <tr>
 <td>
 Bienvenido!  En este "espacio virtual" comparto notas sobre proyectos.  Aprendi tanto leyendo lo
-que otros comparten, siempre, a parte de la escuela formal esta el dia a dia.  Por eso siento
+que otros comparten; a parte de la escuela formal esta el dia a dia.  Por eso siento
 la necesidad de hacer tambien mi aporte.  Aca hay temas en general, de mi profesión ,un hobby o deporte.
 <br />
 <br />
 En este blog el formato es más des-estructurado, inclusive le digo que no me decido si usar 
 Inglés ó Español en lo que voy escribiendo.  Si quiere una presentación más profesional 
-sobre mi persona fíjese en <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_new">Linkedin</a>, 
+visite mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_new">Linkedin</a>, 
  para temas más triviales: <a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
