--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ visite mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" tar
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br />
 <br />
-Por el momento no tengo mucho que decir, vivo en Argentina estoy casado y 
-tengo dos hermosas hijas.  Me encanta el café expresso, también acepto una cerveza eventualmente.
+Vivo en Argentina estoy casado y tengo dos hermosas hijas.
+Me encanta el café expresso, también acepto una cerveza eventualmente.
 <br /><br />
 Tengo interes en lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
 <br /><br />
