--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@ Tengo interes en lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
 Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog tecnico</a>, otras veces
 sobre mis aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.
 <br />
-Y fue central en mi educacion una <a href="dm/es_index.html">Maestria en Datamining</a>.
 <br />
 Desde los 10 años que programo, comencé con BASIC aunque la curiosidad inagotable me llevo
 aprender assembler y querer comprender los nuevos y emergentes desafios de la informática.
 Como joven SysOp de un BBS mi hobby de <a href="security/es_index.html">Sysadmin</a> se
-convirtió en mi trabajo.
+convirtió en mi trabajo.  Fue clave para mi desarrollo profesional hacer
+la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA, donde expuse en varias Jornadas y
+complete la tesis para tener el titulo de Magister.
+<br />
+Si quiere invitarme un cafe, puede hacerlo con esta opcion.  Le agradezco que me escriba
+sobre que le gustaria que escriba:<br />
+<img src="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS" />
 </td></tr></table>
 
 </center>
