--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ convirtió en mi trabajo.  Fue clave para mi desarrollo profesional hacer
 la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA, donde expuse en varias Jornadas y
 complete la tesis para tener el titulo de Magister.
 <br />
-Si quiere invitarme un cafe, puede hacerlo con esta opcion.  Le agradezco que me escriba
-sobre que le gustaria que escriba:<br />
-<img src="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS" />
+Si quiere <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>, 
+puede hacerlo con esta opcion.  Le agradezco que me escriba
+sobre que le gustaria que escriba.
 </td></tr></table>
 
 </center>
