--- a/od/es_index.html
+++ b/od/es_index.html
@@ -24,6 +24,8 @@ Básicamente, son datos que podemos usar y estar tranquilos, que no deberíamos 
 </br>
 
 Algunos trabajitos mios:
+<a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a>
+<br />
 <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">Procesado y analisis del Boletin Oficial</a><br />
 Encontre datos sobre <a href="https://github.com/wlamagna/datamining/tree/master/opendata/cinemometros">Cinemometros</a> y durante un tiempo estuve recolectando.<br />
 
