--- a/od/es_index.html
+++ b/od/es_index.html
@@ -23,8 +23,13 @@ Básicamente, son datos que podemos usar y estar tranquilos, que no deberíamos 
 </br>
 </br>
 
-Algunos trabajitos mios:
-<a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a>
+Es que hay que ser cuidadoso con la curiosidad porque uno comienza a tirar de una puntita del obillo
+y empiezan a aparecer cosas, en ese momento quien sabe que me llevo a estudiar el 
+<a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a> de la Republica Argentina, es un
+boletin publico.  Es lo mas inofensivo que puede uno imaginar, o eso crei hasta que se me ocurrio
+hacer algo de Text Mining y Visualizar cantidad de personas contratadas por el estado, deuda y solicitudes de
+armas de fuego.  Despues de los resultados no quise saber mas nada.
+<br />
 <br />
 <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">Procesado y analisis del Boletin Oficial</a><br />
 Encontre datos sobre <a href="https://github.com/wlamagna/datamining/tree/master/opendata/cinemometros">Cinemometros</a> y durante un tiempo estuve recolectando.<br />
