--- a/od/es_index.html
+++ b/od/es_index.html
@@ -2,10 +2,12 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body bgcolor="black" style="color:white; font-family: Verdana;">
+<body style="font-family: Arial;">
 
 <h1>Datos Abiertos</h1>
-
+<center>
+<table>
+<tr><td>
 Lo que ocurre en Data Mining es que se necesitan DATOS, y tarde o temprano uno aprende y de pronto se
 da cuenta de que:
 
@@ -14,15 +16,16 @@ da cuenta de que:
 <li>Lo mucho que las empresas importantes cuidan sus datos y lo celosos que son de ellos (por algo será).</li>
 <li>Hay que tener mucho cuidado al usar un dato, hay que saber los términos y condiciones.</li>
 </ul>
-
+</td></tr>
+<tr><td>
 Entonces también en este camino conocí los Datos Abiertos !  Datos públicos, cuyos dueños seríamos todos, o eso creo.
 Es raro, decir Datos Publicos, porque puede accederlo alguien que paga los impuestos que hicieron posible su recolección
 pero también alguien que vive en otro pais, asi que no voy a meterme en tantos detalles.
 
 Básicamente, son datos que podemos usar y estar tranquilos, que no deberíamos estar molestando a nadie, o eso espero !
-</br>
-</br>
 
+</td></tr>
+<tr><td>
 Es que hay que ser cuidadoso con la curiosidad porque uno comienza a tirar de una puntita del obillo
 y empiezan a aparecer cosas, en ese momento quien sabe que me llevo a estudiar el 
 <a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a> de la Republica Argentina, es un
@@ -41,6 +44,8 @@ Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
 Por ejemplo, los <a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n6105_Lamagna.pdf">Datos Abiertos de Gobierno Electorales de la República Argentina</a>.
 Es un ejemplo ideal, datos en formato texto con los resultados electorales por mes, acompañados por su
 telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
+</td></tr>
+</table>
 
 <br/>
 <b>Ejemplos</b>
