--- a/od/es_index.html
+++ b/od/es_index.html
@@ -32,12 +32,20 @@ y empiezan a aparecer cosas, en ese momento quien sabe que me llevo a estudiar e
 boletin publico.  Es lo mas inofensivo que puede uno imaginar, o eso crei hasta que se me ocurrio
 hacer algo de Text Mining y Visualizar cantidad de personas contratadas por el estado, deuda y solicitudes de
 armas de fuego.  Despues de los resultados no quise saber mas nada.
-<br />
-<br />
-<a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">Procesado y analisis del Boletin Oficial</a><br />
-Encontre datos sobre <a href="https://github.com/wlamagna/datamining/tree/master/opendata/cinemometros">Cinemometros</a> y durante un tiempo estuve recolectando.<br />
 
-Y Tambien por un tiempo reuni los datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">covid 19</a>
+Aca <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">github</a> de esas epocas.
+<br />
+<br />
+Tambien encontre datos publicos sobre los famosos Cinemometros,
+esos radares que estan en la ruta y hacen la multa.  El problema con estos radades es que 
+aveces estan mal configurados y luego las multas hay que reclamarlas a 1000 km de nuestro domicilio, cuando
+ya regresamos de las vacaciones y no queremos subirnos a un auto por un buen tiempo !  Uno termina pagando la multa logicamente.
+Hay!! Siempre metiendome en problemas, entonces encontre datos 
+sobre <a href="https://github.com/wlamagna/datamining/tree/master/opendata/cinemometros">Cinemometros</a> y durante 
+un tiempo estuve recolectando y graficando.
+<br /><br />
+No podia ser menos, al desatarse esta Pandemia tuve que meterme a 
+reunir datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">covid 19</a>
 publicado en Argentina.  Pero bueno, todo dura un tiempo.<br /><br />
 
 Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
