--- a/od/es_index.html
+++ b/od/es_index.html
@@ -41,7 +41,7 @@ esos radares que estan en la ruta y hacen la multa.  El problema con estos radad
 aveces estan mal configurados y luego las multas hay que reclamarlas a 1000 km de nuestro domicilio, cuando
 ya regresamos de las vacaciones y no queremos subirnos a un auto por un buen tiempo !  Uno termina pagando la multa logicamente.
 Hay!! Siempre metiendome en problemas, entonces encontre datos 
-sobre <a href="https://github.com/wlamagna/datamining/tree/master/opendata/cinemometros">Cinemometros</a> y durante 
+sobre <a href="datamining/opendata/cinemometros">Cinemometros</a> y durante 
 un tiempo estuve recolectando y graficando.
 <br /><br />
 No podia ser menos, al desatarse esta Pandemia tuve que meterme a 
