--- a/od/es_index.html
+++ b/od/es_index.html
@@ -57,7 +57,7 @@ telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
 
 <br/>
 <b>Ejemplos</b>
-<a href="http://www.wallves.com/od/boletinoficial/deuda_banco_mundial.html" target="_new">
+<a href="datamining/opendata/boletinoficial/deuda_banco_mundial.html" target="_new">
 Deuda de la República Argentina con el Banco Mundial (Datos y Visualización)</a><br />
 
 <br />
