--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <table width="900">
 <tr>
 <td>
-Bienvenido!  En este "espacio virtual" comparto notas sobre proyectos.  Aprendi tanto leyendo lo
+Bienvenido!  En esta pagina intentare organizar los proyectos de interes.  Aprendi tanto leyendo lo
 que otros comparten; a parte de la escuela formal esta el dia a dia.  Por eso siento
 la necesidad de hacer tambien mi aporte.  Aca hay temas en general, de mi profesión ,un hobby o deporte.
 <br />
