--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 <table width="900">
 <tr>
 <td>
-Bienvenido!  En esta pagina intentare organizar los proyectos de interes.  Aprendi tanto leyendo lo
-que otros comparten; a parte de la escuela formal esta el dia a dia.  Por eso siento
-la necesidad de hacer tambien mi aporte.  Aca hay temas en general, de mi profesión ,un hobby o deporte.
+Bienvenido!  En esta pagina intentare organizar los proyectos de interes.  Aprendi tanto de otros
+que quiero hacer tambien mi aporte, como una forma de agradecer.
 <br />
 <br />
-En este blog el formato es más des-estructurado, inclusive le digo que no me decido si usar 
-Inglés ó Español en lo que voy escribiendo.  Si quiere una presentación más profesional 
-visite mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_new">Linkedin</a>, 
- para temas más triviales: <a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
+Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_new">Linkedin</a>,
+<a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br />
