--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_n
 <a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
-<br />
-<br />
-Tengo interes en lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
 <br /><br />
-Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog tecnico</a>, otras veces
-sobre mis aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.
-<br />
-<br />
-Desde los 10 años que programo, comencé con BASIC aunque la curiosidad inagotable me llevo
+Desde los 10 años que programo, comencé con BASIC aunque la curiosidad inagotable me llevó a
 aprender assembler y querer comprender los nuevos y emergentes desafios de la informática.
 Como joven SysOp de un BBS mi hobby de <a href="security/es_index.html">Sysadmin</a> se
 convirtió en mi trabajo.  Fue clave para mi desarrollo profesional hacer
 la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA, donde expuse en varias Jornadas y
 complete la tesis para tener el titulo de Magister.
+Así fué como descubrí lo que se llama <a href="od/es_index.html">Datos Abiertos</a>.
 <br />
-Si quiere <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>, 
-puede hacerlo con esta opcion.  Le agradezco que me escriba
-sobre que le gustaria que escriba.
+<br />
+Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a>, otras veces
+sobre mis aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.
+<br />
+<br />
+Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
+Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
 </td></tr></table>
 
 </center>
