--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_n
 <br /><br />
 Desde los 10 años que programo, comencé con BASIC aunque la curiosidad inagotable me llevó a
 aprender assembler y querer comprender los nuevos y emergentes desafios de la informática.
-Como joven SysOp de un BBS mi hobby de <a href="security/es_index.html">Sysadmin</a> se
+Como joven SysOp de un BBS mi hobby de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Sysadmin</a> se
 convirtió en mi trabajo.  Fue clave para mi desarrollo profesional hacer
 la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA, donde expuse en varias Jornadas y
 complete la tesis para tener el titulo de Magister.
