--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -2,28 +2,20 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body bgcolor="black" style="color:white; font-family: Verdana;">
-
-<li>¿ Qué es Datamining ?</li>
-
+<body style="font-family: Arial;">
 
 </br>
 </br>
 
 <u><b>Análisis de redes sociales</b></u><br />
-Son muy útiles los métodos que se pueden utilizar para analizar como se
-propagaría una epidemia dadas ciertas condiciones.   Identificar líderes de 
-opinión ó comunidades.  En este trabajo práctico que hice para el curso de 
-Análisis de Redes Sociales en la universidad de Michigan durante el Otoño 2013,
-presento una red de actores de películas argentinos.  El trabajo está
+Trabajo práctico que hice para el curso de 
+Análisis de Redes Sociales en la universidad de Michigan durante el Otoño 2013.
+Utilicé una red de actores de películas argentinos.  El trabajo está
 basado en IMDB, analicé películas y actores, creé una estructura de datos de grafo y analicé 
 la relación entre actores que trabajan juntos.<br /><br />
-
 <a href="Lamagna.pdf" />Análisis de Red Social de Actores</a>
-
 <br />
 <hr />
-<br />
 <br />
 <u><b>Análisis de datos electorales</b></u><br />
 En la política también hay una abundancia, riqueza y diversidad de datos.
