--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -18,11 +18,11 @@ la relación entre actores que trabajan juntos.<br /><br />
 <hr />
 <br />
 <u><b>Análisis de datos electorales</b></u><br />
-En la política también hay una abundancia, riqueza y diversidad de datos.
-Los datos abiertos de gobierno dan lugar
-a poder contar una historia ó iniciar algun tipo de investigación.<br />
-En otras palabras: Responder preguntas! <br /><br />
-
+Tuve una epoca de pasion por los <a href="od/es_index.html">Datos Abiertos</a> y muchos
+son de índole política, sobre todo los Datos Abiertos de Gobierno.  
+Durante las elecciones es un verdadero festivál de datos y no podía perdermelo,
+por eso hice este estudio: 
+<br />
 <a href="el1.html">¿ Porqué en el 2013 el partido político Convergencia Popular Porteña obtuvo 0 votos ?</a><br />
 
 <br />
