--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -35,7 +35,7 @@ la relación entre actores que trabajan juntos.<br /><br />
 <hr />
 <br />
 <u><b>Análisis de datos electorales</b></u><br />
-Tuve una epoca de pasion por los <a href="od/es_index.html">Datos Abiertos</a> y muchos
+Tuve una epoca de pasion por los <a href="../od/es_index.html">Datos Abiertos</a> y muchos
 son de índole política, sobre todo los Datos Abiertos de Gobierno.  
 Durante las elecciones es un verdadero festivál de datos y no podía perdermelo,
 por eso hice este estudio: 
