--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -15,8 +15,7 @@ de documentos impresos en empresas, gobiernos y una sociedad en expansion perman
 Para citar algunos ejemplos la gestión automática de correo postal, procesamiento 
 de cheques bancarios, ingreso manual de datos en formularios, registros gubernamentales 
 y tarjetas de credito impresas son aplicaciones de gran uso.
-<br /><br />
-
+<br />
 <a href="/dm/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 1)</a><br />
 <a href="http://datamining.dc.uba.ar/datamining/Files/Tesis/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 2)</a><br />
 <a href="">Link a la tesis (Spanish)</a><br />
@@ -29,10 +28,9 @@ Trabajo práctico que hice para el curso de
 Análisis de Redes Sociales en la universidad de Michigan durante el Otoño 2013.
 Utilicé una red de actores de películas argentinos.  El trabajo está
 basado en IMDB, analicé películas y actores, creé una estructura de datos de grafo y analicé 
-la relación entre actores que trabajan juntos.<br /><br />
+la relación entre actores que trabajan juntos.<br />
 <a href="Lamagna.pdf" />Análisis de Red Social de Actores</a>
 <br />
-<hr />
 <br />
 <u><b>Análisis de datos electorales</b></u><br />
 Tuve una epoca de pasion por los <a href="../od/es_index.html">Datos Abiertos</a> y muchos
