--- a/dm/el1.html
+++ b/dm/el1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body bgcolor="black" style="color:white; font-family: Verdana;">
+<body style="font-family: Arial;">
 
 <u><b>¿ Porqué en el 2013 el partido político Convergencia Popular Porteña obtuvo 0 votos ?</b></u><br />
 
