--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -4,6 +4,9 @@
 </head>
 <body style="font-family: Arial;">
 
+
+
+Datamining a partir de <a href="../od/es_index.html">Datos Abiertos</a>.
 <u><b>Lectura artificial de números manuscritos en 
 datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires</b></u><br />
 
