--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ Desde los 10 años que programo, comencé con BASIC aunque la curiosidad inagota
 aprender assembler y querer comprender los nuevos y emergentes desafios de la informática.
 Como joven SysOp de un BBS mi hobby de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Sysadmin</a> se
 convirtió en mi trabajo.  Fue clave para mi desarrollo profesional hacer
-la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA, donde expuse en varias Jornadas y
-complete la tesis para tener el titulo de Magister.
+la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA donde
+obtuve el titulo de Magister con mi Tesis Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
 <br />
 <br />
 Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a>, otras veces
