--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -4,12 +4,18 @@
 </head>
 <body style="font-family: Arial;">
 
+Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos, y pese a que
+hay muchisimos datos dando vueltas, no todos pueden ser utilizados con libertad, la gran
+mayoria son privados y estan bajo licencias y condiciones que casi nadie lee.<br />
+Es por eso que cuando buscaba tema de tesis, recorri varias opciones pero siempre me encontraba
+con el obstaculo de los datos: no tenia un permiso formal de poder utilizarlos, no conocia
+a alguien que tuviese interes en ser sponsor de mi tesis al menos proveyendo los Datos.<br />
+Fue asi como los <a href="../od/es_index.html">Datos Abiertos</a> cobraron importancia en mi carrera, porque al igual que
+el software libre podia utilizarlos, modificarlos, compartirlos sin tener que depender de 
+conocer a la persona indicada.<br />
 
-
-Datamining a partir de <a href="../od/es_index.html">Datos Abiertos</a>.
-<u><b>Lectura artificial de números manuscritos en 
-datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires</b></u><br />
-
+Mi tesis se trata de <b>Lectura artificial de números manuscritos en 
+datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires</b>.
 El reconocimiento de dígitos manuscritos es un tema que ocupa distintas areas 
 de conocimiento e investigacion tanto en aprendizaje automático como en 
 clasificación de patrones. Su importancia se debe al interés que genera la posibilidad de su
@@ -24,12 +30,12 @@ y tarjetas de credito impresas son aplicaciones de gran uso.
 <a href="">Link a la tesis (Spanish)</a><br />
 </br>
 </br>
-<u><b>Análisis de redes sociales</b></u><br />
-Trabajo práctico que hice para el curso de 
-Análisis de Redes Sociales en la universidad de Michigan durante el Otoño 2013.
+
+También exploré lo que es el <u><b>análisis de redes sociales</b></u>, y aca comparto un
+trabajo práctico final de curso de Análisis de Redes Sociales en la universidad de Michigan durante el Otoño 2013.
 Utilicé una red de actores de películas argentinos.  El trabajo está
 basado en IMDB, analicé películas y actores, creé una estructura de datos de grafo y analicé 
-la relación entre actores que trabajan juntos.<br />
+la relación entre actores que trabajan juntos.
 <a href="Lamagna.pdf" />Análisis de Red Social de Actores</a>
 
 </body>
