--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -3,7 +3,9 @@
 <meta charset="UTF-8">
 </head>
 <body style="font-family: Arial;">
-
+<center>
+<table width="900px">
+<tr><td>
 Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos, y pese a que
 hay muchisimos datos dando vueltas, no todos pueden ser utilizados con libertad, la gran
 mayoria son privados y estan bajo licencias y condiciones que casi nadie lee.<br />
@@ -37,6 +39,7 @@ Utilicé una red de actores de películas argentinos.  El trabajo está
 basado en IMDB, analicé películas y actores, creé una estructura de datos de grafo y analicé 
 la relación entre actores que trabajan juntos.
 <a href="Lamagna.pdf" />Análisis de Red Social de Actores</a>
-
+</td></tr></table>
+</center>
 </body>
 </html>
