--- a/od/es_index.html
+++ b/od/es_index.html
@@ -4,10 +4,11 @@
 </head>
 <body style="font-family: Arial;">
 
-<h1>Datos Abiertos</h1>
 <center>
-<table>
+<table width="900px">
 <tr><td>
+Habiendo conocido lo que son los Datos Abiertos y sus bondades, primero hice mi tesis usando los Datos Abiertos
+de Gobierno de Resultados Electorales (<a href="http://servicios.infoleg.gob.ar/infolegInternet/anexos/255000-259999/257755/norma.htm">decreto 117/2016</a>).
 Estuve interesado en analizar el
 <a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a> de la Republica Argentina, es un
 boletin publico.  Es lo mas inofensivo que puede uno imaginar, o eso crei hasta que se me ocurrio
