--- a/od/es_index.html
+++ b/od/es_index.html
@@ -7,14 +7,14 @@
 <center>
 <table width="900px">
 <tr><td>
-Habiendo conocido lo que son los Datos Abiertos y sus bondades, primero hice mi tesis usando los Datos Abiertos
-de Gobierno de Resultados Electorales (<a href="http://servicios.infoleg.gob.ar/infolegInternet/anexos/255000-259999/257755/norma.htm">decreto 117/2016</a>).
-Estuve interesado en analizar el
-<a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a> de la Republica Argentina, es un
-boletin publico.  Es lo mas inofensivo que puede uno imaginar, o eso crei hasta que se me ocurrio
-hacer algo de Text Mining y Visualizar cantidad de personas contratadas por el estado, deuda y solicitudes de
-armas de fuego.  Despues de los resultados no quise saber mas nada.
-
+Al conocer lo que son los Datos Abiertos, tras completar mi <a href="../dm/es_index.html">tesis</a> usando los Datos Abiertos
+de Gobierno de Resultados 
+Electorales (<a href="http://servicios.infoleg.gob.ar/infolegInternet/anexos/255000-259999/257755/norma.htm" target="_new">decreto 117/2016</a>)
+segui explorando el tema y recorri algunos caminos:<br />
+<br />
+Analisis del <a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a> de la Republica Argentina.
+El "Boletin Oficial" es publico, todo el mundo puede accederlo. Aplique sobre el mismo algo de  
+Text Mining y Visualizacion de contratos, deuda adquirida, solicitudes de armas de fuego.
 Aca <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">github</a> de esas epocas.
 <br />
 <br />
