--- a/od/es_index.html
+++ b/od/es_index.html
@@ -18,13 +18,8 @@ Text Mining y Visualizacion de contratos, deuda adquirida, solicitudes de armas 
 Aca <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">github</a> de esas epocas.
 <br />
 <br />
-Tambien encontre datos publicos sobre los famosos Cinemometros,
-esos radares que estan en la ruta y hacen la multa.  El problema con estos radades es que 
-aveces estan mal configurados y luego las multas hay que reclamarlas a 1000 km de nuestro domicilio, cuando
-ya regresamos de las vacaciones y no queremos subirnos a un auto por un buen tiempo !  Uno termina pagando la multa logicamente.
-Hay!! Siempre metiendome en problemas, entonces encontre datos 
-sobre <a href="datamining/opendata/cinemometros">Cinemometros</a> y durante 
-un tiempo estuve recolectando y graficando.
+Tambien encontre datos publicos sobre los famosos <a href="datamining/opendata/cinemometros">Cinemometros</a>,
+esos radares que estan en la ruta y hacen la multa si uno excede cierta velocidad.
 <br /><br />
 No podia ser menos, al desatarse esta Pandemia tuve que meterme a 
 reunir datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">covid 19</a>
